--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,7 @@
 platform = espressif32
 board = esp32dev
 framework = espidf
+lib_deps =
+    ; Source https://github.com/Fishwaldo/esp_ghota.git
+    ; TODO: Re-Enable
+    ; fishwaldo/esp_ghota @ 0.0.1
