--- a/platformio.ini
+++ b/platformio.ini
@@ -9,6 +9,6 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:esp32dev]
-platform = espressif32
+platform = espressif32@6.5.0
 board = esp32dev
 framework = espidf
